--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.landing-page {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+}
+
+.background-container {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.background-img {
+  width: 100vw; /* 100% of viewport width */
+  height: 100vh; /* 100% of viewport height */
+  object-fit: cover;
+  object-position: center; /* Center the */
+}
+
+.foreground-content {
+  flex: 1;
+  z-index: 1;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  position:absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  background-color: #282c34;
+  color: #61dafb;  
+  text-align: center;
 }
