--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+body{
+  background-color: rgb(182, 182, 182);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container{
+  font-family: Graphik-Semibold-Web, sans-serif;
+  font-weight: bolder;
+  font-size: 13px;
+  line-height: 17px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar{
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-bar-input{
+  width: 200px;
+  padding: 5px;
+  border: none;
+  outline: none;
+  background: none; 
 }
+
